# structure-guided-lns2

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pytest.ini
configs/: build_storage_compaction.json  closed_loop_confirmation_analysis.json  closed_loop_confirmation_collection.json  closed_loop_confirmation_dataset.json  closed_loop_confirmation_pilot.json  closed_loop_multiseed_analysis.json  closed_loop_multiseed_collection.json  closed_loop_multiseed_dataset.json  context_confirmation_collection.json  context_confirmation_dataset.json  contextual_repair_order_audit.json  graph_representation_audit.json  high_load_rescue_dataset.json  high_load_rescue_dataset_full.json  independent_layout_probe_collection.json  independent_layout_probe_dataset.json  independent_layout_probe_quality.json  model_capacity_audit.json  movingai_devset.json  movingai_mechanism_probe_collection.json  movingai_mechanism_probe_v2_bounded_collection.json  movingai_mechanism_probe_v2_collection.json  movingai_mechanism_probe_v2_dataset.json  movingai_ood_analysis.json  movingai_ood_collection.json  movingai_ood_dataset.json  movingai_ood_devset.json  natural_distribution_confirmation_dataset.json  policy_visited_analysis.json  policy_visited_collection.json  policy_visited_confirmation_dataset.json  policy_visited_dataset.json  policy_visited_natural_analysis.json  policy_visited_natural_collection.json  proposal_pruner_v2.json  ranking_objective_audit.json  ranking_objective_confirmation_dataset.json  realized_ranking_confirmation_collection.json  realized_ranking_confirmation_dataset.json  repair_collection_calibration.json  (+15 more)
docs/: CLOSED_LOOP_CONFIRMATION.md  CLOSED_LOOP_MULTISEED_CONFIRMATION.md  CONFIGURATION.md  CONTEXTUAL_REPAIR_ORDER_AUDIT.md  CONTEXT_AUDIT.md  CONTEXT_SECONDARY_AUDIT.md  ENVIRONMENT_AUDIT.md  GRAPH_REPRESENTATION_AUDIT.md  INDEPENDENT_LAYOUT_PROBE.md  INITLNS_RESEARCH_REPORT_ZH.md  LOCAL_REPRESENTATION_AUDIT.md  MOVINGAI_BASELINES.md  MOVINGAI_MECHANISM_PROBE.md  MOVINGAI_OOD_CLOSED_LOOP.md  MOVINGAI_PROBE_QUALITY.md  NATURAL_DISTRIBUTION_CONFIRMATION.md  POLICY_VISITED_AGGREGATION.md  POLICY_VISITED_NATURAL_DISTRIBUTION.md  PROJECT_FILE_GUIDE_ZH.md  RANKING_OBJECTIVE_AUDIT.md  REALIZED_NEIGHBORHOOD_PROBE.md  REALIZED_NEIGHBORHOOD_RANKING_AUDIT.md  REALIZED_RANKING_CONFIRMATION.md  REPAIR_COLLECTION.md  REPAIR_ORDER_PROBE.md  REPOSITORY_HYGIENE.md  RESEARCH_ROADMAP.md  SEQUENTIAL_CREDIT_AUDIT.md  STAGE1.md  STAGE2.md  STAGE3.md  STAGE4.md  STAGE5.md  TRACE_AND_POLICY_API.md  V2_REPAIR_AWARE.md  V2_STALL_SAFE_EVALUATION.md
experiments/: __init__.py  _common.py  balanced_controller.py  candidate_pruning.py  closed_loop_confirmation.py  closed_loop_confirmation_analysis.py  closed_loop_trace_conversion.py  closed_loop_trace_storage.py  compact_controller_model.py  context_audit.py  context_confirmation.py  contextual_repair_order_audit.py  controller_performance_benchmark.py  feasibility_benchmark.py  feature_schema_v2.py  feature_schema_v3.py  final_model_evaluation.py  graph_feature_gbdt_audit.py  graph_representation_audit.py  high_load_rescue.py  high_load_rescue_training.py  independent_layout_probe.py  lns2_bottleneck.py  lns2_speed_quality_calibration.py  lns2_tradeoff.py  local_representation_audit.py  model_capacity_audit.py  movingai_devset.py  movingai_mechanism_probe.py  movingai_ood_confirmation.py  movingai_probe_quality.py  natural_distribution_confirmation.py  natural_distribution_confirmation_analysis.py  neighborhood_candidates.py  neighborhood_features.py  online_feature_engine.py  parallel_runtime.py  policy_visited_aggregation.py  policy_visited_aggregation_analysis.py  policy_visited_independent_confirmation.py  (+40 more)
generators/: __init__.py  candidate_diagnostics.py  candidate_experience.py  candidate_guided_solver.py  candidate_ranker.py  candidate_retrieval.py  config.py  dataset.py  experience.py  io.py  models.py  repair_experience.py  retrieval.py  rollout_experience.py  stage5.py  stage5_v2.py  stage5_v3.py  stage5_v4.py  task_flows.py  validation.py  visualization.py  warehouse.py
native_features/: CMakeLists.txt
research/: README.md  __init__.py
scripts/: analyze_closed_loop_confirmation.py  analyze_independent_layout_probe.py  analyze_movingai_ood_confirmation.py  analyze_movingai_probe.py  analyze_realized_neighborhood_probe.py  analyze_repair_experience.py  analyze_stage5_results.py  audit_movingai_probe_quality.py  audit_repository_hygiene.py  audit_rescue_policies.py  audit_state_conditioned_rescue.py  audit_v3_features.py  audit_v3_s3_oracle.py  audit_v3_s3_source_replay.py  benchmark_controller_v2.py  benchmark_exact_runtime.py  benchmark_portable_tree_inference.py  build_candidate_experience.py  build_query_experience.py  build_repair_experience.py  build_retrieval_index.py  calibrate_lns2_speed_quality.py  check_environment.py  collect_candidate_experience.py  collect_closed_loop_confirmation.py  collect_high_load_rescue_data.py  collect_natural_distribution_confirmation.py  collect_policy_visited_experience.py  collect_realized_neighborhood_probe.py  collect_realized_ranking_confirmation.py  collect_repair_experience.py  consolidate_research_results.py  convert_closed_loop_traces.py  evaluate_candidate_ranker.py  evaluate_candidate_retrieval.py  evaluate_retrieval.py  export_closed_loop_models.py  fetch_movingai_devset.py  generate_dataset.py  generate_gallery.py  (+48 more)
src/: instance.cpp  jsonl_observer.cpp  main.cpp  online_features.cpp  online_features.h  online_features_module.cpp  python_bindings.cpp  repair_driver.cpp  solver.cpp
tests/: __init__.py  check_features_native.py  check_gpbs_result.py  (+43 more)
(+239 files in other folders)
